challenge 2 lewagon day 30

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,8 @@
   </head>
 
   <body>
-  <div class="mt-1">
+  <div class="">
+  <header><h2>Movie List:DB</h2></header>
     <%= yield %>
   </div>
   </body>
