--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,6 +1,3 @@
-
-<header><h2>Movie List:DB</h2></header>
-
 <div class="banner shadow" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://miro.medium.com/v2/resize:fit:3840/1*chnnCiC2ozMfPpuXNoIjjw.jpeg);">
   <div class="container">
     <h1>Movie List:DB brings <strong>a full movie database</strong> to <strong>everyone</strong>!</h1>
@@ -19,10 +16,17 @@
 <div class="row">
 <% @lists.each do |list|%>
 <div class="co-12 col-sm-6 col-md-4 mb-3">
+<%= link_to list_path(list.id), data: {turbo_method: :delete, turbo_confirm: "Delete #{list.name}?"} do %>
+            <i class="fa-regular fa-trash-can"></i></li>
+            <% end %>
 <%= link_to list_path(list), class:"text-decoration-none" do %>
-<div class="card-category" data-aos="zoom-in" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://lumiere-a.akamaihd.net/v1/images/au_disneynews_pixar_cars2_lightningmaterfinn_incarticle_bbfc75ef.jpeg?region=0,38,1152,647&width=960)">
-  <%= list.name %>
-</div>
+ <% if list.photo.attached? %>
+      <div class="card-category" data-aos="zoom-in" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path list.photo.key, height: 300, crop: :fill %>')">
+      <%= list.name %>
+    </div>
+    <%else %>
+    <p><%= list.name %></p>
+    <% end %>
 <% end %>
 </div>
 <% end %>
