--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,11 +1,37 @@
- <h1>About <%= @list.name %></h1>
- <br>
-<% @movies.each do |movie| %>
-  <p><%= movie.title %></p>
-<% end %>
- <br>
- <br>
- <br>
- <%= link_to lists_path do %>
+<div class="position-relative">
+  <div class="card-category card-large" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= @list.photo.attached? ? cl_image_path(@list.photo.key) : asset_path('list_background.jpg') %>)">
+    <h1><%= @list.name %></h1>
+  </div>
+</div>
+<div class="container mb-5">
+  <div class="d-flex justify-content-between my-4">
+    <button class="movie-tag btn btn-flat"><%= pluralize(@list.movies.size, "movie") %></button>
+    <%= link_to  new_list_bookmark_path(@list) do %>
+      <button type="button" class="btn btn-flat">add a movie</button>
+      <% end %>
+      <%= link_to "delete list", list_path(@list), class: "btn btn-cancel", data: { turbo_method: :delete, turbo_confirm: "Are you sure you want to delete this list?" } %>
+  </div>
+  <div class="row d-flex justify-content-center">
+    <% @list.movies.each do |movie| %>
+      <% bookmark = Bookmark.find_by(list: @list, movie: movie) %>
+      <div class="col-12 col-sm-6 mb-4" data-aos="zoom-in">
+        <div class="bg-white rounded shadow h-100">
+          <%= image_tag movie.poster_url, alt: movie.title, class: "bd-placeholder-img card-img-top" %>
+          <div class="p-3 rounded-bottom d-flex flex-column">
+            <strong><%= movie.title %> <span class="text-muted font-weight-normal">• <%= movie.rating %> <i class="fas fa-star star-yellow"></i></span></strong>
+            <small class="text-muted"><%= movie.overview %></small>
+            <div class="d-flex align-items-end justify-content-between pt-4">
+              <div>
+                <i class="fas fa-quote-left me-2"></i><small class="flex-grow-1"><%= bookmark.comment %></small>
+              </div>
+              <small class="text-right flex-shrink-0"><%= link_to "delete", bookmark_path(bookmark), data: { turbo_method: :delete, turbo_confirm: "Are you sure you want to remove #{movie.title} from your #{@list.name} list"}, class: 'text-danger' %></small>
+            </div>
+          </div>
+        </div>
+      </div>
+    <% end %>
+       <%= link_to lists_path do %>
     <button class="btn btn-primary"> Back to list</button>
   <% end %>
+  </div>
+</div>
